Initial implementation of right mouse drag positional navigation.

--- a/view.html
+++ b/view.html
@@ -10,7 +10,7 @@
 		<script src="navigation.js"></script>
 	</head>
 	<body>
-		<a-scene cursor="rayOrigin: mouse">
+		<a-scene cursor="rayOrigin: mouse" id="scene">
 			<a-assets>
 				<img id="grid-space" src="grid.png">
 			</a-assets>
