--- a/view.html
+++ b/view.html
@@ -8,9 +8,9 @@
 		<script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
 		<script src="https://unpkg.com/aframe-event-set-component@3.0.3/dist/aframe-event-set-component.min.js"></script>
 		<script src="globals.js"></script>
+		<script src="scripts/shortid.js"></script>
 		<script src="grid-interactive.js"></script>
 		<script src="navigation.js"></script>
-		
 	</head>
 	<body>
 		<a-scene cursor="rayOrigin: mouse" id="scene">
